--- a/resources/scss/modules/_buttons.scss
+++ b/resources/scss/modules/_buttons.scss
@@ -13,8 +13,8 @@ a {
 
 .btn-o {
     background-color: $awesome-white;
-    padding: .5em;
-    border-radius: 5px;
+    padding: 0.75em;
+    border-radius: 25px;
     cursor: pointer;
     color: $flat-black;
     &:hover {
