--- a/resources/scss/modules/_experience-grid.scss
+++ b/resources/scss/modules/_experience-grid.scss
@@ -18,7 +18,7 @@
         .job-type{
             font-weight: 500;
             margin-left: 2em;
-            background-color: #FFB180;
+            background-color: $dark-purple;
             padding: 1px 5px;
             color: white;
             border-radius: 5px;
