--- a/resources/scss/modules/_hexagon-loader.scss
+++ b/resources/scss/modules/_hexagon-loader.scss
@@ -17,7 +17,7 @@
             height: 160px;
             display: block;
             position: absolute;
-            border: 2px solid $flat-orange;
+            border: 2px solid transparent;
             border-radius: 50%;
             top: -2px;
             left: -2px;
@@ -37,7 +37,7 @@
             height: 160px;
             display: block;
             position: absolute;
-            border: 2px solid $red;
+            border: 2px solid $flat-purple;
             border-radius: 50%;
             top: -2px;
             left: -2px;
