--- a/resources/scss/modules/_skills-grid.scss
+++ b/resources/scss/modules/_skills-grid.scss
@@ -32,6 +32,10 @@
         .segment-title {
             margin: 2em 0;
         }
+        img {
+            max-width: 100px;
+            max-height: 100px;
+        }
         .column {
             flex-grow: 1;
             flex-basis: 0;
